--- a/page.html
+++ b/page.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>My Second Page<title/>
+<title>My Second Page</title>
 </html>
 <body>
   My Second Page.Back <a href="home.html">Home</a>.
