--- a/page.html
+++ b/page.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>My Second Page</title>
-</html>
+</head>
 <body>
   My Second Page.Back <a href="home.html">Home</a>.
 </body>
