--- a/tracking-code-sample/event.html
+++ b/tracking-code-sample/event.html
@@ -16,10 +16,10 @@ gtag("config", "G-8V3NS7ZP7B");
 <script>
 function trackCTA(){
 	// 送出事件紀錄
-	gtag("event", "點擊", {
-		"event_category":"CTA",
-		"event_label":"頁面標題",
-		"value": 1
+	gtag("event", "Click", {
+		"event_category":"Call To Action",
+		"event_label":"Label",
+		"value": 2
 	});
 	alert("Event Sent!");
 }
